@@ -102,6 +102,9 @@
    - markus@cvs.openbsd.org 2001/06/24 05:47:13
      [sshconnect2.c]
      oops, missing format string
+   - markus@cvs.openbsd.org 2001/06/24 17:18:31
+     [ttymodes.c]
+     passing modes works fine: debug2->3
 
 20010622
  - (stevesk) handle systems without pw_expire and pw_change.
